@@ -1,8 +1,3 @@
-S3method(as.data.frame,by)
-S3method(merge,list)
-S3method(shift,data.frame)
-S3method(shift,default)
-S3method(sort,data.frame)
 export(as.data.frame.by)
 export(as.matrix.by)
 export(autoplot.microbenchmark)
@@ -10,7 +5,6 @@ export(between)
 export(bin)
 export(bytable)
 export(categorize)
-export(cleanTurked)
 export(compareplot)
 export(daysofweek)
 export(destring)
@@ -31,25 +25,40 @@ export(odds)
 export(panel.densityplot.enhanced)
 export(panel.ecdf)
 export(panel.xyplot_rug)
+export(prettify)
 export(quantile_cutpoints)
 export(readdir)
 export(remove.factors)
 export(rep_along)
 export(reshapeasy)
-export(round_sigfig)
 export(roundnear)
+export(round_sigfig)
 export(searchPattern)
 export(shift)
 export(shift.data.frame)
 export(shift.default)
+export(sides)
+export(sides.default)
+export(sides.formula)
 export(sort.data.frame)
-export(splitDF)
 export(splitc)
+export(splitDF)
 export(stack.list)
+export(tab)
 export(title.page.new)
 export(trues)
 export(unsplitDF)
 export(write.sanitized.csv)
+export(xtable.CrossTable)
+export(xtablelm)
 export(xtable.lme)
 export(xtable.summary.lme)
-export(xtablelm)
+import(plyr)
+import(reshape2)
+S3method(as.data.frame,by)
+S3method(merge,list)
+S3method(shift,data.frame)
+S3method(shift,default)
+S3method(sides,default)
+S3method(sides,formula)
+S3method(sort,data.frame)
